--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "Ezra-XD",
+  "name": "githubstalk-api",
   "version": "1.0.0",
-  "description": "Ezra-md simple multi device WhatsApp Bot.",
-  "main": "./index.js",
-  "type": "commonjs",
-  "scripts": {
-    "start":  "pm2 start . --attach --name ezra"
+  "description": "API to fetch GitHub user information",
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "node-fetch": "^3.1.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Louis-X0/EZRA-XD.git"
+  "scripts": {
+    "start": "node index.js"
   },
   "keywords": [
-    "bot",
+    "github",
     "api",
-    "Ezra",
-    "Louis",
-    "sparkyapi"
+    "express"
   ],
-  "author": "Louis",
-  "developer": "Louis / Zeta",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/Louis-X0/EZRA-XD/issues"
-  },
-  "homepage": "https://github.com/Louis-XD/EZRA-XD#readme",
-  "dependencies": {
-    "express": "^4.17.2",
-    "node-fetch": "^2.0.0",
-  }
+  "author": "Your Name",
+  "license": "MIT"
 }
