--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API to fetch GitHub user information",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.3.3",
     "express": "^4.17.1",
     "node-fetch": "^3.1.0"
   },
