--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.3.3",
     "express": "^4.17.1",
     "node-fetch": "^3.1.0"
+    "cheerio": "^1.0.0-rc.12",
   },
   "scripts": {
     "start": "node index.js"
